@@ -3297,8 +3297,8 @@ instr_p1[] = {
 
     { "call",   0x5cc00000, CALL_OPERAND, OPC_CALL, FLAG_P1_STD },
     { "clkset", 0x0c400000, DST_OPERAND_ONLY, OPC_GENERIC_NOFLAGS, FLAG_P1_STD },
-    { "cmp",    0x84000000, TWO_OPERANDS, OPC_CMP, FLAG_P1_STD | FLAG_WARN_NOTUSED},
-    { "cmps",   0xc0000000, TWO_OPERANDS, OPC_CMPS, FLAG_P1_STD | FLAG_WARN_NOTUSED },
+    { "cmp",    0x84000000, TWO_OPERANDS, OPC_CMP, FLAG_P1_STD | FLAG_WARN_WCZ_NOTUSED},
+    { "cmps",   0xc0000000, TWO_OPERANDS, OPC_CMPS, FLAG_P1_STD | FLAG_WARN_WCZ_NOTUSED },
     { "cmpsub", 0xe0800000, TWO_OPERANDS, OPC_GENERIC, FLAG_P1_STD },
     { "cmpsx",  0xc4000000, TWO_OPERANDS, OPC_GENERIC, FLAG_P1_STD },
     { "cmpx",   0xcc000000, TWO_OPERANDS, OPC_GENERIC, FLAG_P1_STD },
@@ -3363,8 +3363,8 @@ instr_p1[] = {
     { "sumnz",  0x9c800000, TWO_OPERANDS, OPC_SUMNZ, FLAG_P1_STD },
     { "sumz",   0x98800000, TWO_OPERANDS, OPC_SUMZ, FLAG_P1_STD },
 
-    { "test",   0x60000000, TWO_OPERANDS, OPC_TEST, FLAG_P1_STD | FLAG_WARN_NOTUSED },
-    { "testn",  0x64000000, TWO_OPERANDS, OPC_TESTN, FLAG_P1_STD | FLAG_WARN_NOTUSED },
+    { "test",   0x60000000, TWO_OPERANDS, OPC_TEST, FLAG_P1_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "testn",  0x64000000, TWO_OPERANDS, OPC_TESTN, FLAG_P1_STD | FLAG_WARN_WCZ_NOTUSED },
     { "tjnz",   0xe8000000, JMPRET_OPERANDS, OPC_GENERIC_BRCOND, FLAG_P1_STD },
     { "tjz",    0xec000000, JMPRET_OPERANDS, OPC_GENERIC_BRCOND, FLAG_P1_STD },
 
@@ -3402,12 +3402,12 @@ instr_p2[] = {
     { "subs",   0x01c00000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
     { "subsx",  0x01e00000, TWO_OPERANDS, OPC_SUBSX, FLAG_P2_STD },
 
-    { "cmp",    0x02000000, TWO_OPERANDS, OPC_CMP, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "cmpx",   0x02200000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "cmps",   0x02400000, TWO_OPERANDS, OPC_CMPS, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "cmpsx",  0x02600000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "cmpr",   0x02800000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "cmpm",   0x02a00000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
+    { "cmp",    0x02000000, TWO_OPERANDS, OPC_CMP, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "cmpx",   0x02200000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "cmps",   0x02400000, TWO_OPERANDS, OPC_CMPS, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "cmpsx",  0x02600000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "cmpr",   0x02800000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
+    { "cmpm",   0x02a00000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_WCZ_NOTUSED },
     { "subr",   0x02c00000, TWO_OPERANDS, OPC_SUBR, FLAG_P2_STD },
     { "cmpsub", 0x02e00000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
 
@@ -3459,8 +3459,8 @@ instr_p2[] = {
     { "encod",  0x07800000, TWO_OPERANDS_OPTIONAL, OPC_ENCOD, FLAG_P2_STD },
     { "ones",   0x07a00000, TWO_OPERANDS_OPTIONAL, OPC_ONES, FLAG_P2_STD },
 
-    { "test",   0x07c00000, TWO_OPERANDS_OPTIONAL, OPC_TEST, FLAG_P2_STD|FLAG_WARN_NOTUSED },
-    { "testn",  0x07e00000, TWO_OPERANDS, OPC_GENERIC_NR, FLAG_P2_STD|FLAG_WARN_NOTUSED },
+    { "test",   0x07c00000, TWO_OPERANDS_OPTIONAL, OPC_TEST, FLAG_P2_STD|FLAG_WARN_WCZ_NOTUSED },
+    { "testn",  0x07e00000, TWO_OPERANDS, OPC_GENERIC_NR, FLAG_P2_STD|FLAG_WARN_WCZ_NOTUSED },
 
     { "setnib", 0x08000000, THREE_OPERANDS_NIBBLE, OPC_GENERIC_NOFLAGS, 0 },
     { "getnib", 0x08400000, THREE_OPERANDS_NIBBLE, OPC_GETNIB, 0 },
@@ -3731,7 +3731,7 @@ instr_p2[] = {
     { "execf",  0x0d600033, P2_DST_CONST_OK, OPC_GENERIC_NR_NOFLAGS, 0 },
 
     { "getptr", 0x0d600034, DST_OPERAND_ONLY, OPC_GENERIC_NOFLAGS, 0 },
-    { "getbrk", 0x0d600035, DST_OPERAND_ONLY, OPC_GENERIC_NOFLAGS, FLAG_P2_STD|FLAG_WARN_NOTUSED },
+    { "getbrk", 0x0d600035, DST_OPERAND_ONLY, OPC_GENERIC_NOFLAGS, FLAG_P2_STD|FLAG_ERR_WCZ_NOTUSED },
     { "cogbrk", 0x0d600035, DST_OPERAND_ONLY, OPC_GENERIC_NOFLAGS, 0 },
     { "brk",    0x0d600036, P2_DST_CONST_OK, OPC_BREAK, 0 },
     { "setluts",0x0d600037, P2_DST_CONST_OK, OPC_GENERIC_NR_NOFLAGS, 0 },
@@ -3803,9 +3803,9 @@ instr_p2[] = {
     { "wrnc",   0x0d60006d, DST_OPERAND_ONLY, OPC_WRNC, 0 },
     { "wrz",    0x0d60006e, DST_OPERAND_ONLY, OPC_WRZ, 0 },
     { "wrnz",   0x0d60006f, DST_OPERAND_ONLY, OPC_WRNZ, 0 },
-    { "modcz",  0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_P2_STD | FLAG_WARN_NOTUSED },
-    { "modc",   0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_WC | FLAG_WARN_NOTUSED },
-    { "modz",   0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_WZ | FLAG_WARN_NOTUSED },
+    { "modcz",  0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_P2_STD | FLAG_ERR_WCZ_NOTUSED },
+    { "modc",   0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_WC | FLAG_ERR_WCZ_NOTUSED },
+    { "modz",   0x0d64006f, P2_MODCZ, OPC_GENERIC, FLAG_WZ | FLAG_ERR_WCZ_NOTUSED },
     { "setscp", 0x0d600070, P2_DST_CONST_OK, OPC_GENERIC_NR_NOFLAGS, 0 },
     { "getscp", 0x0d600071, DST_OPERAND_ONLY, OPC_GENERIC, 0 },
 
